<resources>
    <string name="app_name">果核</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="apk_introduction">Crafted with love by 果核开发小组</string>

    <string name="action_bg">更换背景</string>
    <string name="action_donate">支持捐赠</string>
    <string name="action_help">帮助反馈</string>
    <string name="action_exit">退出应用</string>

    <string name="action_update_course">更新课表</string>
    <string name="action_change_year">更改学期</string>
    <string name="action_change_week">更改周次</string>
    <string name="action_current_week">更改当前周</string>
    <string name="action_change_background">更换背景</string>

    <string name="action_add">添加纪念日</string>
    <string name="action_sure">完成添加</string>
    <string name="action_share">分享</string>
    <string name="action_switch">切换</string>

    <string name="Save">Save</string>
    <string name="Complete">Complete</string>

    <string name="menu_group_1">应用</string>
    <string name="menu_group_2">更多</string>

    <string name="item_change_account">切换账号</string>
    <string name="item_setting">设置</string>
    <string name="item_share">分享此应用</string>

    <string name="item_jiaowu">教务系统</string>
    <string name="item_lab">实验系统</string>
    <string name="item_aolan">奥兰系统</string>
    <string name="item_job">就业信息</string>
    <string name="item_todo">待办事项</string>
    <string name="item_entertainment">娱乐视频</string>
    <string name="item_game">小游戏</string>
    <string name="item_library">馆藏查询</string>
    <string name="item_classroom">空教室查询</string>
    <string name="item_grade">成绩查询</string>
    <string name="item_club">俱乐部</string>
    <string name="item_exercise">早操查询</string>
    <string name="item_school_bus">校车查询</string>
    <string name="item_myday">我的一天</string>
    <string name="title_activity_settings">Settings</string>

    <string name="bottom">——————我也是有底线的——————</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="todo_widget_text">待办事项</string>
    <string name="add_widget">Add widget</string>

    <string name="course_widget_text">课程表</string>
    <string name="appwidget_text">EXAMPLE</string>

    <string name="title_activity_game">GameActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
