<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/menu_group_1">

        <menu android:checkableBehavior="single">

            <item
                android:id="@+id/nav_game"
                android:icon="@drawable/ic_menu_game"
                android:title="@string/item_game" />
            <item
                android:id="@+id/nav_todo"
                android:icon="@drawable/ic_menu_todo"
                android:title="@string/item_todo" />
            <!--<item-->
            <!--android:id="@+id/nav_job"-->
            <!--android:icon="@drawable/ic_menu_job"-->
            <!--android:title="@string/item_job" />-->

            <!--<item-->
                <!--android:id="@+id/nav_entertainment"-->
                <!--android:icon="@drawable/ic_menu_job"-->
                <!--android:title="@string/item_entertainment" />-->
        </menu>

    </item>


    <item android:title="@string/menu_group_2">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_setting"
                android:title="@string/item_setting" />
            <item
            android:id="@+id/nav_change_account"
            android:icon="@drawable/ic_menu_change"
            android:title="@string/item_change_account" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/item_share" />
        </menu>
    </item>

</menu>
