<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_update_course"
        android:icon="@drawable/ic_menu_donate"
        android:title="@string/action_update_course"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_week"
        android:icon="@drawable/ic_menu_donate"
        android:title="@string/action_change_week"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_year"
        android:icon="@drawable/ic_menu_help"
        android:orderInCategory="100"
        android:title="@string/action_change_year"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_background"
        android:icon="@drawable/ic_menu_exit"
        android:orderInCategory="100"
        android:title="@string/action_change_background"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_current_week"
        android:icon="@drawable/ic_menu_exit"
        android:orderInCategory="100"
        android:title="@string/action_current_week"
        app:showAsAction="never" />
</menu>